# mtcui_bs

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/mtcui/: cli.py  helpers.py  plugin.py  views.py
ckanext/mtcui/assets/: script.js  webassets.yml
ckanext/mtcui/assets/css/: mtcui_bs.css  responsive.css
ckanext/mtcui/logic/: action.py  auth.py  schema.py  validators.py
ckanext/mtcui/templates/: base.html  footer.html  header.html  page.html
ckanext/mtcui/templates/backup/: footer.html  header copy 2.html  header copy.html  header.html  index.html
ckanext/mtcui/templates/home/: about.html  index.html
ckanext/mtcui/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/mtcui/tests/logic/: test_action.py  test_auth.py  test_validators.py
